Change linux_64 provider to linux_aarch64 for ARM

--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -5,7 +5,7 @@ github:
 os_version:
   linux_64: cos7
 build_platform:
-  linux_aarch64: linux_64
+  linux_aarch64: linux_aarch64
 provider:
   linux_aarch64: default
   linux_ppc64le: travis
