--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -2,10 +2,6 @@ conda_forge_output_validation: true
 github:
   branch_name: main
   tooling_branch_name: main
-os_version:
-  linux_64: cos7
-build_platform:
-  linux_aarch64: linux_aarch64
 provider:
   linux_aarch64: default
-  linux_ppc64le: travis
+  linux_ppc64le: default
