--- a/conda-forge.yml
+++ b/conda-forge.yml
@@ -6,4 +6,4 @@ provider:
   linux_aarch64: default
   linux_ppc64le: default
 build_platform:
-  linux_aarch64: linux_64
+  linux_aarch64: linux_aarch64
