--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,7 +33,8 @@ requirements:
     - make  # [unix]
   host:
     - {{ mpi }}  # [mpi != 'nompi']
-    - fftw * {{ mpi_prefix }}_*
+    - fftw * {{ mpi_prefix }}_* # [unix]
+    - fftw * nompi_* # [win]
 
 
 test:
